# AsyncLogger

./: .gitignore  CMakeLists.txt  README.md
include/: Logger.hpp  SafeQueue.hpp
src/: SafeQueue.cpp  main.cpp
tests/: test_lib.cpp  test_logger.cpp  test_queue.cpp
